--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
   <app-root></app-root>
-
+<!-- 
   <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 
 </body>
 </html>
