--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="styles.3b0d7e48de5e6bd1ee8d.css"></head>
+</head>
 <body>
   <app-root></app-root>
 
   <script src="//code.jquery.com/jquery-1.12.4.js"></script>
   <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-<script type="text/javascript" src="runtime.c782fa2a5cb54ee15194.js"></script><script type="text/javascript" src="polyfills.92108b287fe28032870b.js"></script><script type="text/javascript" src="scripts.c7f5874f24d2163e2949.js"></script><script type="text/javascript" src="main.14e86f4b34a7a2c3d233.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
